--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
