--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
 
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
 }
 
 kapt {
