--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+    implementation "androidx.paging:paging-runtime:3.2.1"
+
 }
 
 kapt {
