--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 def localProperties = new Properties()
@@ -70,7 +71,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation "androidx.paging:paging-runtime:3.2.1"
-
 }
 
 kapt {
