--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation "androidx.paging:paging-runtime:3.2.1"
+
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
+    implementation "androidx.room:room-paging:2.5.2"
 }
 
 kapt {
