Writing unit test for MovieDetailsUseCase and MovieDetailsViewModel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
     implementation "androidx.room:room-paging:2.5.2"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+
 }
 
 kapt {
